# capstone-2022-backend

./: .gcloudignore  .gitignore  .gitmodules  .python-version  Pipfile  README.md  alembic.ini  app.yaml  config.py  data.json  google-scraper.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  service-account-test.json  setup.py  test_production_env.ini
.github/workflows/: main.yml
Terraform/: main.tf  prod.tfvars  terraform.tfvars  test.tfvars  variables.tf
app/: __init__.py  database.py  dependencies.py  main.py  models.py  openapi.json
app/models/: authentication.py
app/routes/: article.py  authentication.py  diary.py  example.py  user.py
app/schema/: article.py  authentication.py  default_response.py  diary.py  user.py
app/services/: article.py  authentication.py  diary.py  user.py
app/templates/: login.html
app/test/: conftest.py  test_authentication.py  test_general.py  test_user.py
app/tests/: conftest.py  test_article.py  test_authentication.py  test_diary.py  test_general.py  test_user.py
app/utils/: conftest_utils.py  depedencies.py  file.py  firestore.py  jwt.py  logger.py  model.h5  response.py  schema.py  serpapi.py  startup.py  test.py  tokenizer.pickle
migrations/: env.py
migrations/versions/: 012af9d23652_updating_user_tabel.py  1fdcb6b7e9a3_create_user_model.py  29a7bb38b7a5_create_session_table.py  2a06275b77aa_update_item.py  56cabb51a54b_updating_user_tabel_remove_nullable.py  710e465e30ef_updating_user_and_session_time_updated_3.py  (+14 more)
postman/: .gitignore  index.js  package-lock.json  package.json
(+2 files in other folders)
